src/test/custom/valid/import/importCollision.wacc
# import 2 files that import the same third file

import collision1.hwacc 
import collision2.hwacc

begin

  skip
  
end
