src/test/custom/invalid/import/selfImport.wacc
# import a .hwacc which import itself

import selfImport.hwacc 

begin 
  skip 
end 